src/test/ui/macros/macro-path-prelude-fail-1.stderr
error[E0433]: failed to resolve: partially resolved path in a macro
  --> $DIR/macro-path-prelude-fail-1.rs:3:9
   |
LL |         Vec::clone!();
   |         ^^^^^^^^^^ partially resolved path in a macro

error[E0433]: failed to resolve: partially resolved path in a macro
  --> $DIR/macro-path-prelude-fail-1.rs:4:9
   |
LL |         u8::clone!();
   |         ^^^^^^^^^ partially resolved path in a macro

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
